Revert "Merge branch 'master' of https://github.com/vanderbiltrobotics/SystemsEngineeringPaper17-18"
This reverts commit 60f9e78ac70f0c2dcc1cc6ae8fd39367e18bf722, reversing
changes made to f5a3707317243453641e78b2ee65244bea5a78d3.

--- a/02_Introduction/02003_Systems_Engineering_Purpose.tex
+++ b/02_Introduction/02003_Systems_Engineering_Purpose.tex
@@ -14,7 +14,7 @@
 \begin{document}
 	\subsection{Purpose of Systems Engineering}
 	\label{subsec:systems_engineering_purpose}
-	The Vanderbilt Robotics Team followed a systems engineering design process outlined by the V-chart presented in Figure \ref{fig:safety_protocol_flowsheet}. The excavation robot has many conflicting constraints and multiple subsystems that all need to perform equally well in order to accomplish the presented challenge. The systems engineering process provides a structured methodology to optimize competing requirements and available resources. It provides a holistic, big-picture approach to the decision making process. 
+	The Vanderbilt Robotics Team followed a systems engineering design process outlined by the V-chart presented below. The excavation robot has many conflicting constraints and multiple subsystems that all need to perform equally well in order to accomplish the presented challenge. The systems engineering process provides a structured methodology to optimize competing requirements and available resources. It provides a holistic, big-picture approach to the decision making process. 
 	
 	\FloatBarrier
 		\begin{figure}[h]
