Added Bibliography and Citations

--- a/03_Systems_Engineering/03002_Preliminary_Design.tex
+++ b/03_Systems_Engineering/03002_Preliminary_Design.tex
@@ -129,7 +129,7 @@ The auger was the team’s chosen digging mechanism. It provided a compromise be
 	
 	In order to localize the robot using a camera system, fiducial markers are often placed at a predefined location to serve as a landmark. The robot then determines its pose using a coordinate transformation. The OpenCV library has pre-built functions for determining robot pose by detecting AruCo markers, which are binary square fiducial markers. This method of localization is advantageous because the time required to implement is relatively low compared to other options. However, since the camera is operating in the visual light spectrum, it may be prone to error measurement due to dust kickup. Additionally, ranging with a single camera may not be as accurate because it relies solely on the relative image size instead of time of flight measurements or stereoscopy.
 	
-	The Microsoft Kinect is a robust, low-cost, 3-dimensional vision system. The Microsoft Kinect outperforms LiDAR systems in dusty conditions due to its use of structured light three dimensional scanning.~\footnote{C. Hall, "Comparing the Performance Of Structured Light Depth Sensors and Traditional Time-of-flight Depth Sensors For Use in a Lunar Mining Environment", Master's, University of Alabama, 2014.} The kinect has an extensive amount of libraries for collecting and utilizing data for depth mapping and feature detection that could be adapted to match the autonomy module requirements. 
+	The Microsoft Kinect is a robust, low-cost, 3-dimensional vision system. The Microsoft Kinect outperforms LiDAR systems in dusty conditions due to its use of structured light three dimensional scanning \cite{kinect}. The kinect has an extensive amount of libraries for collecting and utilizing data for depth mapping and feature detection that could be adapted to match the autonomy module requirements. 
 	
 	An Inertial measurement unit (IMU) measures acceleration and angular velocity at a high refresh rate. However, since double integration is required to estimate position, the error accumulation rate makes the data unreliable. Instead, an IMU can be used in combination with encoder telemetry data on the drive motors to correct wheel slippage error. By comparing the acceleration and angular velocity measurements from the encoder to the expected values based the IMU data, erroneous data can be eliminated and the wheel velocities can be adjusted to correct for slippage
 	
