--- a/05_Bibliography/05000_Bibliography.tex
+++ b/05_Bibliography/05000_Bibliography.tex
@@ -14,8 +14,31 @@
 
 \begin{document}
 \renewcommand\refname{Bibliography}
-	\begin{thebibliography}{9}
-	
+	\begin{thebibliography}{10}
+	 \bibitem{syseng}
+	 "Chapter 2", Eng.auburn.edu, 2018. [Online]. Available: http://www.eng.auburn.edu/\~{} dbeale/ESMDCourse/Chapter2.htm. [Accessed: 10-Apr-2018].
+	 
+	 \bibitem{kinect}
+	 C. Hall, ``Comparing the Performance Of Structured Light Depth Sensors and Traditional Time-of-flight Depth Sensors For Use in a Lunar Mining Environment'', Master's, University of Alabama, 2014.
+	 
+	 \bibitem{yolo}
+	 Moreland, Scott, et al. Soil Behavior of Wheels with Grousers for Planetary Rovers. citeseerx.ist.psu.edu/viewdoc/download.
+	 
+	 \bibitem{noused}
+	 ``Online Help.'' Table of Ultimate Friction Factors for Dissimilar Materials Influence of Friction between Soil and Back of the Structure GEO5 Online Help, www.finesoftware.eu/help/geo5/en/table-of-ultimate-friction-factors-for-dissimilar-materials-01/.
+	 
+	 \bibitem{hello}
+	 Effect of Straight Grousers Parameters on Motion Performance of Small Rigid Wheel on Loose Sand, \texttt{scialert.net/fulltext/}
+	 
+	 \bibitem{sup}
+	 Ellery, Alex, et al. ``ExoMars Rover Chassis Analysis and Design.'' ResearchGate, Aug. 2005, www.researchgate.net/publication/228628817\_ExoMars\_rover\_chassis\_analysis\_and\_design.
+	 
+	 \bibitem{waifu}
+	 NASA's Ninth Annual Robotic Mining Competition Rules Rubrics, May 14-18, 2018, Kennedy Space Center www.nasa.gov/sites/default/files/atoms/files/2018\_rules\_rubrics\_parti.pdf
+	 
+	 \bibitem{pooby}
+	 Cannon, Rob. ``NASA Robotic Mining Competition.'' NASA, NASA, 16 Apr. 2015, www.nasa.gov/offices/education/centers/kennedy/technology/nasarmc.html.
+	 
 	\end{thebibliography}
 \end{document}
 
