--- a/06_Appendix_A/06000_Appendix_A.tex
+++ b/06_Appendix_A/06000_Appendix_A.tex
@@ -13,5 +13,145 @@
 % END HEADER
 
 \begin{document}
-	\section{Appendix A}
+ 
+\newpage
+\section{Appendix A}
+
+\noindent
+\Large Below are defined the requirements for all subsystems on the Vanderbilt University Robotics robot: \vspace*{0.1in}
+
+
+\noindent
+\normalsize
+Frame:
+\footnotesize
+
+\vspace*{0.05in}
+\noindent
+\emph{Functional}
+\begin{itemize}
+ \item Must be able to successfully traverse Martian terrain
+ \item Must support the excavation and deposit systems
+ \item Must contain the drivetrain
+ \item Must fit within competition size constraints at the beginning of the competition run
+\end{itemize}
+\noindent
+\emph{Performance}
+\begin{itemize}
+ \item Must have minimal wheel slippage
+ \item Must be able to be controlled autonomously
+ \item Must be lightweight
+\end{itemize}
+\noindent
+\emph{Budget}
+\begin{itemize}
+ \item Must cost less than \$2,000
+\end{itemize}
+\vspace*{0.1in}
+
+
+\noindent
+\normalsize
+Excavation:
+\footnotesize
+
+\vspace*{0.05in}
+\noindent
+\emph{Functional}
+\begin{itemize}
+ \item Must dig through 30 cm of BP-1
+ \item Must excavate icy regolith 
+ \item Must deposit icy regolith into the deposit system
+\end{itemize}
+\noindent
+\emph{Performance}
+\begin{itemize}
+ \item Must excavate a minimum of 10 kg of icy regolith
+\end{itemize}
+\noindent
+\emph{Budget}
+\begin{itemize}
+ \item Must cost less than \$1,000
+\end{itemize}
+
+\vspace*{0.1in}
+
+\noindent
+\normalsize 
+Depositing:
+\footnotesize
+
+\vspace*{0.05in}
+\noindent
+\emph{Functional}
+\begin{itemize}
+ \item Must store icy regolith during competition round
+ \item Must deposit icy regolith in collection bin
+\end{itemize}
+\noindent
+\emph{Performance}
+\begin{itemize}
+ \item Must be able to store at least 50 kg of icy regolith
+ \item Must carry icy regolith to a height of 3 in. above the collection bin
+\end{itemize}
+\noindent
+\emph{Budget}
+\begin{itemize}
+ \item Must cost less than \$500
+\end{itemize}
+
+
+\vspace*{0.1in}
+
+\noindent
+\normalsize
+Robot Controller:
+\footnotesize
+
+\vspace*{0.05in}
+\noindent
+\emph{Functional}
+\begin{itemize}
+ \item Must be capable of actuating every motor on the robot
+ \item Must interface with every sensors (directly or indirectly) on the robot
+\end{itemize}
+\emph{Performance}
+\begin{itemize}
+ \item Must utilize as little network bandwidth as possible
+\end{itemize}
+\newpage\noindent
+\emph{Budget}
+\begin{itemize}
+ \item Must cost no monetary value
+\end{itemize}
+
+\vspace*{0.1in}
+
+\noindent
+\normalsize
+Autonomy:
+\footnotesize
+\vspace*{0.05in}
+
+\noindent
+\emph{Functional}
+\begin{itemize}
+ \item The autonomy module shall be capable of localizing the robot from an unknown starting position
+ \item The autonomy module shall be able to detect and avoid obstacles such as boulders and ditches
+ \item The autonomy module shall communicate with the robot controller with standard control commands
+\end{itemize}
+
+\noindent
+\emph{Perfomance}
+\begin{itemize}
+ \item The autonomy module shall be capable of navigating the robot back and forth from the starting zone to the mining zone
+ \item The autonomy module shall be able to detect failover to human control in case of an error mode
+\end{itemize}
+
+\noindent
+\emph{Budget}
+\begin{itemize}
+ \item The autonomy module shall have as little computation requirements as possible
+\end{itemize}
+
 \end{document}
