--- a/02_Introduction/02003_Systems_Engineering_Purpose.tex
+++ b/02_Introduction/02003_Systems_Engineering_Purpose.tex
@@ -20,7 +20,7 @@
 		\begin{figure}[h]
 			\centering
 			\includegraphics[width=.50\linewidth]{09_Figures/systems_engineering_vee_chart.jpg}
-			\caption{Systems Engineering V-Chart} \cite{syseng}}
+			\caption{Systems Engineering V-Chart} \cite{syseng}
 			\label{fig:safety_protocol_flowsheet}
 		\end{figure}
 		\FloatBarrier
