--- a/03_Systems_Engineering/03002_Preliminary_Design.tex
+++ b/03_Systems_Engineering/03002_Preliminary_Design.tex
@@ -138,7 +138,7 @@ Experiments were conducted to test the effectiveness of elevating sand and grave
 	
 	The Microsoft Kinect is a robust, low-cost, 3-dimensional vision system. The Microsoft Kinect outperforms LiDAR systems in dusty conditions due to its use of structured light three dimensional scanning \cite{kinect}. The kinect has an extensive amount of libraries for collecting and utilizing data for depth mapping and feature detection that could be adapted to match the autonomy module requirements. 
 	
-	An Inertial measurement unit (IMU) measures acceleration and angular velocity at a high refresh rate. However, since double integration is required to estimate position, the error accumulation rate makes the data unreliable. Instead, an IMU can be used in combination with encoder telemetry data on the drive motors to correct wheel slippage error. By comparing the acceleration and angular velocity measurements from the encoder to the expected values based the IMU data, erroneous data can be eliminated and the wheel velocities can be adjusted to correct for slippage
+	An inertial measurement unit (IMU) measures acceleration and angular velocity at a high refresh rate. However, since double integration is required to estimate position, the error accumulation rate makes the data unreliable. Instead, an IMU can be used in combination with encoder telemetry data on the drive motors to correct wheel slippage error. By comparing the acceleration and angular velocity measurements from the encoder to the expected values based the IMU data, erroneous data can be eliminated and the wheel velocities can be adjusted to correct for slippage
 	
 	Based on research conducted for each sensor system, it was determined that the best suited option for the robot would be a combination of a Microsoft Kinect, a camera for AruCo marker tracking, an inertial measurement unit, and encoders for telemetry data. The camera, encoders, and IMU will be used to localize the robot while the Kinect will  be used to track obstacles on the field.
 	
