--- a/00_Title_Page/00000_FRR_Title_Page.tex
+++ b/00_Title_Page/00000_FRR_Title_Page.tex
@@ -89,6 +89,11 @@ Dr. Nabil Simaan: Faculty Advisor \\
               {\includegraphics[scale=0.9]{09_Figures/VUlogo3}};
 \end{tikzpicture}
 
+\begin{tikzpicture}[remember picture,overlay]
+   \node [xshift=10.22cm,yshift=14.36cm] at (current page.south west)
+     {\includegraphics[scale=0.15]{09_Figures/simaan.png}};
+\end{tikzpicture}
+
 %}
 
 \end{titlepage}
