--- a/03_Systems_Engineering/03002_Preliminary_Design.tex
+++ b/03_Systems_Engineering/03002_Preliminary_Design.tex
@@ -174,7 +174,7 @@ Experiments were conducted to test the effectiveness of elevating sand and grave
 	
 	\subsection{Preliminary Design Review}
 	
-	On January 10th, the executive team members met with the team’s faculty advisor to review the proposed preliminary designs. The preliminary design of each subsystem was verified to satisfy the design requirements. The team was cleared to move on the final design stage. 
+	On January 10, 2018, the executive team members met with the team's faculty advisor to review the proposed preliminary designs. The preliminary design of each subsystem was verified to satisfy the design requirements. The team was cleared to move on the final design stage. 
 
 	
 	
