--- a/03_Systems_Engineering/03005_System_Assembly_And_Testing.tex
+++ b/03_Systems_Engineering/03005_System_Assembly_And_Testing.tex
@@ -23,7 +23,7 @@
 		\centering
 	 	\includegraphics[width=0.30\textwidth]{09_Figures/final_wheel.png}
 	 	\caption{CAD Model of Final Wheel Assembly}
-	 	\label{fig:fan-cad}
+	 	\label{fig:final_wheel}
 	\end{wrapfigure}	
 	
 	The wheels must be tested for their performance in traversing the Martian terrain. It must be verified that there is not a lot of wheel slippage and that the autonomy sensors can accurately measure angular rotation. This, along with the optimal turning radius and the robot's ability to escape steep ditches, will be tested by driving the robot in a sandy environment. The environment will have obstacles similar in size to the ones on the RMC field, with sand and gravel representing the BP-1 and icy regolith, respectively.
