--- a/04_Conclusions/04000_Conclusions.tex
+++ b/04_Conclusions/04000_Conclusions.tex
@@ -14,10 +14,9 @@
 
 \begin{document}
 	\section{Conclusions}
-		The Vanderbilt Robotics Team has used a systems engineering approach to design an autonomous Mars excavation rover for the 2018 NASA RMC. The rover design seeks to find an elegant solution to the complex challenge of natural resource mining on Mars. The team was motivated to tackle this challenge to help develop the autonomous space robotics field, as it is essential to the future of interplanetary travel. 
+		The Vanderbilt Robotics Team has used a systems engineering approach to design an autonomous Mars excavation rover for the 2018 NASA RMC. The rover design seeks to find an elegant solution to the complex challenge of natural resource mining on Mars and help develop the autonomous space robotics field, since it is essential to the future of interplanetary travel. 
 		
-		
-The final robot design had many strong points, such as its ease of assembly and custom fabricated systems. With the experience and prototype developed this year, the team will continue to optimize the robot design to maximize factors such as weight, power efficiency, and autonomy in future years.
+		The final robot design had many strong points, such as its ease of assembly and custom fabricated systems. With the experience and prototypes developed this year, the team will continue to optimize the robot design in attributes such as weight, power efficiency, and autonomy in future years.
 
 
 \end{document}
