--- a/06_Appendix_A/06000_Appendix_A.tex
+++ b/06_Appendix_A/06000_Appendix_A.tex
@@ -100,6 +100,31 @@ Depositing:
  \item Must cost less than \$500
 \end{itemize}
 
+\vspace*{0.1in}
+
+\noindent
+\normalsize 
+Power Distribution:
+\footnotesize
+
+\vspace*{0.05in}
+\noindent
+\emph{Functional}
+\begin{itemize}
+ \item All electronic devices on the robot must be powered at their nominal voltage (but not necessarily be on at all times during the competition)
+ \item The entire electrical system must be regulated by a red emergency shutoff switch
+ \item The batteries must satisfy the aggregate capacity requirements of all electrical subsystems
+\end{itemize}
+\noindent
+\emph{Performance}
+\begin{itemize}
+ \item Each electrical component on the robot must have at least a 20\% safety factor in each current-capacity aspect
+\end{itemize}
+\noindent
+\emph{Budget}
+\begin{itemize}
+ \item Only one battery configuration can be used
+\end{itemize}
 
 \vspace*{0.1in}
 
@@ -119,7 +144,7 @@ Robot Controller:
 \begin{itemize}
  \item Must utilize as little network bandwidth as possible
 \end{itemize}
-\newpage\noindent
+\noindent
 \emph{Budget}
 \begin{itemize}
  \item Must cost no monetary value
